/*
 * Copyright Â© 2024 Kaleido, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
 * the License. You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on
 * an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
 * specific language governing permissions and limitations under the License.
 *
 * SPDX-License-Identifier: Apache-2.0
 */

syntax = "proto3";

package paladin.transaction;
option go_package = "pkg/proto";

service PaladinTransactionService {
  // Syncronous function to submit a transaction
  rpc Submit(SubmitTransactionRequest) returns (SubmitTransactionResponse) {}

}

message SubmitTransactionRequest {
  string contractAddress = 1;
  string from = 2;
  string idempotencyKey = 3;
  oneof payload {
    string payloadJSON = 4;
    string payloadRLP = 5;
  }
}

message SubmitTransactionResponse{
  string transactionId= 1;
}

